# whalecoin

./: COPYING  INSTALL  Makefile  Makefile~  README.md  configure.ac~  makefile.am  qrc_bitcoin.cpp  whalecoin-qt.pro  whalecoin-qt.pro~
contrib/debian/: changelog  control  mintcoin-qt.desktop  mintcoin-qt.lintian-overrides  mintcoin-qt.protocol  mintcoind.lintian-overrides  novacoin-qt.desktop  novacoin-qt.install  novacoind.examples  novacoind.install  novacoind.manpages  rules  watch
contrib/debian/examples/: mintcoin.conf  novacoin.conf
contrib/debian/manpages/: mintcoin.conf.5  mintcoind.1  novacoin.conf.5  novacoind.1
contrib/gitian-descriptors/: README  boost-win.yml  boost-win32.yml  deps-win.yml  deps-win32.yml  deps-win32.yml~  gitian-win.yml~  gitian-win32.yml  gitian-win32.yml~  gitian-win32x.yml  gitian.yml  qt-win.yml~  qt-win32.yml~
contrib/macdeploy/: fancy.plist  notes.txt
doc/: README  README_windows.txt
share/: setup.nsi
share/qt/: make_windows_icon.sh
src/: Makefile.am  Makefile.am~  base58.h  base58.h~  bitcoin-cli.cpp  bitcoind.cpp  bitcoind.cpp.autosave  bitcoinrpc.cpp  bloom.cpp  chainparams.cpp  chainparams.h  checkpoints.cpp  coins.h  coins.h~  db.cpp  init.cpp  init.h  init.h~  irc.cpp  kernel.cpp  leveldbwrapper.cpp  main.cpp  main.cpp.autosave  main.h  main.h~  makefile.am  makefile.am~  makefile.bsd  makefile.linux-mingw  makefile.linux-mingw~  makefile.mingw  makefile.osx  makefile.osx~  makefile.unix  makefile.unix~  miner.cpp  miner.h  net.cpp  net.h  net.h~  (+30 more)
src/qt/: askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  editaddressdialog.cpp  guiutil.cpp  guiutil.h  optionsdialog.cpp  qrcodedialog.cpp  qtipcserver.cpp  qtipcserver.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  transactionrecord.cpp  walletmodel.cpp
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_en.qm  bitcoin_en.ts  bitcoin_ru.qm  bitcoin_ru.ts
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: whalecoin.icns
src/test/: main_tests.cpp  rpc_wallet_tests.cpp
